# dx-app

./: .gitignore  Makefile.am  configure.ac
demo/: Makefile.am  client.c  client_handler.c  client_handler_command.c  client_handler_event.c  client_handler_file.c  client_handler_get_setting.c  client_handler_get_state.c  client_handler_hb.c  client_handler_movie.c  client_handler_set_setting.c  client_handler_set_state.c  client_handler_stream.c  demo-const.h  demo.h  demo_console_menu_2ch.c  demo_console_menu_4ch.c  demo_console_menu_4ch_x264.c  demo_console_menu_camera.c  demo_console_menu_camera_x264.c  demo_console_menu_movie.c  dx-demo  main.c  server.c  server_handler.c  server_handler_command.c  server_handler_command_live.c  server_handler_command_playback.c  server_handler_event.c  server_handler_file.c  server_handler_get_setting.c  server_handler_get_state.c  server_handler_hb.c  server_handler_movie.c  server_handler_set_setting.c  server_handler_set_state.c
src/lib/dx/: Makefile.am  dx_util_ioctl.c
src/lib/dx-core/: Makefile.am  dx-core.h  dx_console.c  dx_debug_malloc.c  dx_debug_malloc.h  dx_event_control.c  dx_event_mplexer.c  dx_event_pipe.c  dx_util_buffer.c  dx_util_clock.c  dx_util_file.c  dx_util_file.h  dx_util_ioctl.c  dx_util_ioctl.h  dx_util_list.c  dx_util_list.h  dx_util_lock.c  dx_util_lock.h  dx_util_log.c  dx_util_log.h  dx_util_schedule.c
src/lib/dx-gles/: dx-gl.c  dx-gl.h  dx-gles-convert-fsh.h  dx-gles-convert-vsh.h  dx-gles-merge-fsh.h  dx-gles-merge-vsh.h  dx-gles.c  dx-gles.h  main.c
src/lib/dx-net/: Makefile.am  dx-net.h  dx_net_client.c  dx_net_client.h  dx_net_common.h  dx_net_dgram.c  dx_net_dgram.h  dx_net_discovery.c  dx_net_packet.c  dx_net_packet.h  dx_net_packet_camera_preview.c  dx_net_packet_file.c  dx_net_packet_io.c  dx_net_server.c  dx_net_server.h
src/lib/dx-parser/: Makefile.am  dx-parser.h  dx_file_avi.c  dx_file_avi_parser.c  dx_file_movie.c  dx_file_movie.h  dx_net_packet_movie_playback.c  dx_net_packet_movie_playback.h
src/lib/dx-video/: Makefile.am  dx-camera-query.c  dx-camera-query.h  dx-camera.c  dx-camera.h  dx-video-sampler.h  dx-video-v4l2-query.c  dx-video-v4l2-query.h  dx-video-v4l2.c  dx-video-v4l2.h  dx-video-yuv-convert.c  dx-video-yuv-convert.h  dx-video-yuv.c  dx-video-yuv.h  dx-video.c  dx-video.h
